--- a/template/gitlab/docker-compose.yml
+++ b/template/gitlab/docker-compose.yml
@@ -5,7 +5,7 @@ postgresql:
     - DB_USER=gitlab
     - DB_PASS=password
     - DB_NAME=gitlabhq_production
-    - DB_EXTENSION=pg_trgm
+    - DB_EXTENSION=pg_trgm,btree_gist
 gitlab:
   restart: always
   image: sameersbn/gitlab:14.4.0
